--- a/Html/index.html
+++ b/Html/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8" />
-        <title>제목</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <title>연습</title>
+    <link rel="stylesheet" type="text/css" href="myFirstStyle.css" />
+    <style>
+        div {
+            background-color: lightgrey;
+            width: 300px;
+            border: 5px solid green;
+            padding: 5px;
+            margin: 5px;
+        }
+    </style>
+</head>
 
-    <body>
-        Hello world
-        <h1>Larger Hello world</h1>
-        <div>div이다
-            <span>div안에 있는 span이다</span>
-            div냐?
-        </div>
-
-        <div>
-            ID <input type="text" placeholder="ID를 입력하세요">
-        </div>
-        <div>
-            PASSWORD <input type="password">
-        </div>
-        <div>
-            <input type="checkbox" checked>아이디 저장
-            <input type="checkbox">자동로그인
-        </div>
-        <div>
-            <input type="radio" name="species"> 고양이
-            <input type="radio" name="species"> 개
-            <input type="radio" name="species" value="인간" checked> 인간
-        </div>
-        <div>
-            <textarea>/* 텍스트 입력 예제(줄바꿈 사용 가능) */</textarea>
-        </div>
-        <div>
-            <button>저장</button>
-        </div>
+<body>
+    <h1>h1/ Hello world</h1>
+    <h1 id="red">id=red h1/ Hello world</h1>
+    <h1 class="greenyellow underling">id=greenyellow h1</h1>
+    <div>div이다
+        <span>div안에 있는 span이다</span>
+        div냐?
+    </div>
 
 
-        <div>
-            <h3>git이메일,이름오류</h3>
-            <img src="C:\캡쳐\190813 git이메일,이름오류.png">
-        </div>
-        <span>
-            <h3>에러메세지 읽기</h3>
-          <img src="C:\캡쳐\190813 에러메세지 읽기.png">
-        </span>
-        <a href="https://ram-t.tistory.com/" target="_blank">내블로그</a>
-    </body>
+    ID <input type="text" placeholder="ID를 입력하세요"><br>
+    PASSWORD <input type="password"><br>
+    <input type="checkbox" checked>아이디 저장
+    <input type="checkbox">자동로그인
+    <div>
+        <input type="radio" name="species"> 고양이
+        <input type="radio" name="species"> 개
+        <input type="radio" name="species" value="인간" checked> 인간
+    </div><br>
+    <textarea>/* 텍스트 입력 예제(줄바꿈 사용 가능) */</textarea><br>
+    <button>저장</button>
+
+
+    <div>
+        <h3>git이메일,이름오류</h3>
+        <img src="C:\캡쳐\190813 git이메일,이름오류.png">
+    </div>
+    <span>
+        <h3>에러메세지 읽기</h3>
+        <img src="C:\캡쳐\190813 에러메세지 읽기.png">
+    </span>
+    <a href="https://ram-t.tistory.com/" target="_blank">내블로그</a>
+</body>
 
 </html>
