--- a/Html/index.html
+++ b/Html/index.html
@@ -14,9 +14,11 @@
             margin: 5px;
         }
     </style>
+    <!-- <script src="main.js"></script> -->
 </head>
 
 <body>
+    <div id="greeting">Welcome</div>
     <h1>h1/ Hello world</h1>
     <h1 id="red">id=red h1/ Hello world</h1>
     <h1 class="greenyellow underling">id=greenyellow h1</h1>
@@ -48,6 +50,8 @@
         <img src="C:\캡쳐\190813 에러메세지 읽기.png">
     </span>
     <a href="https://ram-t.tistory.com/" target="_blank">내블로그</a>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
