html및 css개념정리용 tmp.html, tmpStyle.css 생성

--- a/Html/comment.html
+++ b/Html/comment.html
@@ -22,7 +22,7 @@
     
     <ul id="comments">
         <li class="comment">
-            <div class="username">stevelee</div>
+            <div id="stevelee" class="username">stevelee</div>
             <div class="contents">시각장애인들이 좀 더 잘 사용하면 좋겠습니다.</div>
             <span class="timestamp">2018-02-12 23:22:00</span>
             <button class="up">
@@ -37,6 +37,19 @@
         <li class="comment">
             <div class="username">john</div>
             <div class="contents">좋은 소식이네요</div>
+            <span class="timestamp">2018-02-12 23:22:00</span>
+            <button class="up">
+                <img src="thumbup.png">
+                0
+            </button>
+            <button class="down">
+                <img src="thumbdown.png">
+                0
+            </button>
+        </li>
+        <li class="comment">
+            <div id="stevelee" class="username">stevelee</div>
+            <div class="contents">시각장애인들이 좀 더 잘 사용하면 좋겠습니다.</div>
             <span class="timestamp">2018-02-12 23:22:00</span>
             <button class="up">
                 <img src="thumbup.png">
