--- a/Html/comment.html
+++ b/Html/comment.html
@@ -23,7 +23,7 @@
     <ul id="comments">
         <li class="comment">
             <div id="stevelee" class="username">stevelee</div>
-            <div class="contents">시각장애인들이 좀 더 잘 사용하면 좋겠습니다.</div>
+            <div class="contents">잘 읽었습니다.</div>
             <span class="timestamp">2018-02-12 23:22:00</span>
             <button class="up">
                 <img src="thumbup.png">
@@ -48,8 +48,8 @@
             </button>
         </li>
         <li class="comment">
-            <div id="stevelee" class="username">stevelee</div>
-            <div class="contents">시각장애인들이 좀 더 잘 사용하면 좋겠습니다.</div>
+            <div id="hem" class="username">hemhem</div>
+            <div class="contents">?</div>
             <span class="timestamp">2018-02-12 23:22:00</span>
             <button class="up">
                 <img src="thumbup.png">
